Fixed problem with flashing wordle link

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
 							<p itemprop="description">Website framework for climate crisis stories</p>
 						</article>
 						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
-							<h4 itemprop="name">🎯 <a href="wordle" target="_blank" rel="noopener" itemprop="url">Wordle</a></h4>
+							<h4 itemprop="name">🎯 <a href="wordle" itemprop="url">Wordle</a></h4>
 							<p itemprop="description">Free and unlimited word game</p>
 						</article>
 					</div>
 
 					<div class="view-all">
-						<button class="view-all-btn" onclick="window.location.href='./portfolio'">View All Projects →</button>
+						<a class="view-all-btn" href="./portfolio">View All Projects →</a>
 					</div>
 				</div>
 			</section>
