--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 			"description": "Web developer based in the UK, specializing in web applications and game development.",
 			"hasCredential": [
 				{
-					"@type": "CreativeWork",
-					"name": "CashCat Budgeting App",
-					"description": "Personal budgeting application in early access",
-					"url": "https://cashcat.app"
+					"@type": "SoftwareApplication",
+					"name": "CashCat",
+					"description": "Free personal budgeting webapp in early access",
+					"url": "https://cashcat.app",
+					"applicationCategory": "FinanceApplication",
+					"operatingSystem": "Web Browser"
 				},
 				{
 					"@type": "CreativeWork", 
@@ -143,7 +145,6 @@
 							<p itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now.</p>
 							<div class="project-links">
 								<a href="https://cashcat.app" target="_blank" class="primary-link" rel="noopener" itemprop="url">Try CashCat →</a>
-								<a href="https://cashcat.indigonolan.com/" target="_blank" class="secondary-link" rel="noopener">Alternate Link</a>
 							</div>
 						</div>
 					</article>
