added political playground

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -133,6 +133,11 @@
 							<p itemprop="description">A free and unlimited version of the popular word puzzle game Wordle. Play as many times as you want with a clean, minimalist interface!</p>
 						</article>
 						
+						<article class="project-item" itemscope itemtype="https://schema.org/VideoGame">
+							<h4 itemprop="name">🎮 <a href="https://politicalplayground.sherpa.software" target="_blank" rel="noopener" itemprop="url">The Political Playground</a></h4>
+							<p itemprop="description">A political simulation and semi-educational game inspired by games like The Campaign Trail and The Political Process.</p>
+						</article>
+
 						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
 							<h4 itemprop="name">⚡ <a href="../reaction" itemprop="url">Reaction Time Test</a></h4>
 							<p itemprop="description">A minimalist web application to test and measure your reaction time. Perfect for gamers and anyone curious about their reflexes.</p>
