Update reaction game styles and functionality: enhance layout, improve text handling, and update stylesheet

--- a/reaction/index.html
+++ b/reaction/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Reaction Time Test</title>
-		<link rel="stylesheet" href = "stylesheet.css?version=0.1">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.2">
 		<meta name="description" content="Reaction Time Test"/>
 		<meta name="keywords" content="Zac Nolan, Reaction Time"/>
 		<meta name="author" content="Zac Nolan"/>
@@ -14,7 +14,8 @@
 		<a href="../" id = "home_button" class = "button">Home</a>
 		<div id = "screen" onclick="screen_click()">
 			<div id = "text">
-				Click anywhere to start...
+				<div id="main-text">Click anywhere to start...</div>
+				<div id="sub-text"></div>
 			</div>
 		</div>
 
