added favourites.me to portfolio

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<div class="looking-for">
 						<h2>What are you here for?</h2>
 						<div class="options-grid">
-							<a class="option-card" href="#projects">
+							<a class="option-card" href="./portfolio">
 								<div class="option-icon">💻</div>
 								<h3>My projects</h3>
 								<p>Games and web development</p>
