add SEO for reaction page

--- a/reaction/index.html
+++ b/reaction/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Reaction Time Test</title>
+		<title>Reaction Time Test - Measure Your Response Speed | Indigo Nolan</title>
+		<meta name="description" content="Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli. Perfect for gamers, athletes, and anyone wanting to improve their reflexes."/>
+		<meta name="keywords" content="reaction time test, reaction speed, response time, reflexes, visual reaction, gaming reflexes, Indigo Nolan, online test, free"/>
+		<meta name="author" content="Indigo Nolan"/>
+		<meta name="robots" content="index, follow">
+		<link rel="canonical" href="https://indigonolan.com/reaction/">
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://indigonolan.com/reaction/">
+		<meta property="og:title" content="Reaction Time Test - Measure Your Response Speed">
+		<meta property="og:description" content="Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.">
+		<meta property="og:site_name" content="Indigo Nolan">
+		
+		<!-- Twitter -->
+		<meta property="twitter:url" content="https://indigonolan.com/reaction/">
+		<meta property="twitter:title" content="Reaction Time Test - Measure Your Response Speed">
+		<meta property="twitter:description" content="Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.">
+		
+		<!-- Additional SEO -->
+		<meta name="theme-color" content="#000000">
+		<link rel="icon" type="image/x-icon" href="../favicon.ico">
+		<link rel="apple-touch-icon" href="../apple-touch-icon.png">
+		
 		<link rel="stylesheet" href = "stylesheet.css?version=0.2">
-		<meta name="description" content="Reaction Time Test"/>
-		<meta name="keywords" content="Zac Nolan, Reaction Time"/>
-		<meta name="author" content="Zac Nolan"/>
+		
+		<!-- Structured Data -->
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "WebApplication",
+			"name": "Reaction Time Test",
+			"description": "Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.",
+			"url": "https://indigonolan.com/reaction/",
+			"author": {
+				"@type": "Person",
+				"name": "Indigo Nolan"
+			},
+			"applicationCategory": "GameApplication",
+			"operatingSystem": "Web Browser",
+		}
+		</script>
 	</head>
 	
 	<body>
