Update project descriptions and add new projects to portfolio

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					<article class="featured-project" itemscope itemtype="https://schema.org/SoftwareApplication">
 						<div class="featured-content">
 							<div class="featured-header">
-								<h3 itemprop="name">CashCat</h3>
+								<h3 itemprop="name">🐈 CashCat</h3>
 								<span class="featured-badge">Featured</span>
 							</div>
 							<p itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now.</p>
@@ -150,17 +150,21 @@
 					</article>
 
 					<div class="projects-grid">
-						<article class="project-item" itemscope itemtype="https://schema.org/VideoGame">
-							<h4 itemprop="name">🎮 <a href="https://store.steampowered.com/app/1790870/Fantasteroids/" target="_blank" rel="noopener" itemprop="url">Fantasteroids</a></h4>
-							<p itemprop="description">Fast-paced arcade game available free on Steam</p>
+						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
+							<h4 itemprop="name">⭐ <a href="https://favourites.me" target="_blank" rel="noopener" itemprop="url">favourites.me</a></h4>
+							<p itemprop="description">Track your favorite films, shows, books, and games</p>
 						</article>
 						<article class="project-item" itemscope itemtype="https://schema.org/WebSite">
 							<h4 itemprop="name">🌍 <a href="https://www.climatestorieslibrary.com" target="_blank" rel="noopener" itemprop="url">Climate Stories Library</a></h4>
-							<p itemprop="description">Website framework for climate crisis stories</p>
+							<p itemprop="description">International video library for climate crisis stories</p>
 						</article>
 						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
 							<h4 itemprop="name">🎯 <a href="wordle" itemprop="url">Wordle</a></h4>
-							<p itemprop="description">Free and unlimited word game</p>
+							<p itemprop="description">Unlimited version of the popular word game</p>
+						</article>
+						<article class="project-item" itemscope itemtype="https://schema.org/VideoGame">
+							<h4 itemprop="name">🎮 <a href="https://politicalplayground.sherpa.software" target="_blank" rel="noopener" itemprop="url">The Political Playground</a></h4>
+							<p itemprop="description">Political campaign simulation game like The Campaign Trail</p>
 						</article>
 					</div>
 
