--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -101,7 +101,7 @@
 					<article class="featured-project" itemscope itemtype="https://schema.org/SoftwareApplication">
 						<div class="featured-content">
 							<div class="featured-header">
-								<h3 itemprop="name">CashCat</h3>
+								<h3 itemprop="name">🐈 CashCat</h3>
 								<span class="featured-badge">Featured</span>
 							</div>
 							<p itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now with features for expense tracking, budget planning, and financial insights.</p>
