--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 								<li>Wishing, A Flock of Seagulls</li>
 								<li>Starlight, Muse</li>
 								<li>Mr E's Beautiful Blues, Eels</li>
+								<li>Purple Rain, Tonka B</li>
 							</ul>
 						</div>
 						<div class="about-item">
@@ -204,7 +205,7 @@
 								<li>Portal 1 & 2</li>
 								<li>Rimworld</li>
 								<li>OpenTTD</li>
-								<li>Suzerain</li>
+								<li>Celeste</li>
 								<li>Papers Please</li>
 								<li>Professor Layton</li>
 								<li>The Sims (2)</li>
@@ -213,13 +214,13 @@
 						<div class="about-item">
 							<h3>Top Books and Films</h3>
 							<ul>
-								<li>Tomorrow and Tomorrow and Tomorrow</li>
+								<li>Dr Strangelove</li>
 								<li>12 Angry Men</li>
 								<li>Before the Coffee Gets Cold</li>
 								<li>Sinners</li>
 								<li>Smiley's People</li>
 								<li>Duel</li>
-								<li>The Man Who Killed Himself</li>
+								<li>I Who Have Never Known Men</li>
 							</ul>
 						</div>
 					</div>
