Enhance animations and interactions across the portfolio site

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<main id="cont">
 			<section class="welcome-section">
 				<div class="welcome-content">
-					<h1>Hi, I'm Indigo! 👋</h1>
+					<h1>Hi, I'm Indigo!</h1>
 					
 					<div class="looking-for">
 						<h2>What are you here for?</h2>
