Add section separators with shimmer effect for improved layout

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 				</div>
 			</section>
 
+			<div class="section-separator"></div>
+
 
 			<!-- Projects Section -->
 			<section id="projects" class="content-section">
@@ -173,6 +175,9 @@
 					</div>
 				</div>
 			</section>
+
+			<div class="section-separator"></div>
+
 
 			<!-- About Section -->
 			<section id="about" class="content-section">
@@ -228,7 +233,8 @@
 			</section>
 
 
-			<!-- Contact Info (Initially Hidden) -->
+			<div class="section-separator"></div>
+			<!-- Contact Info -->
 			<section id="contact-info" class="contact-info-section">
 				<div class="contact-content">
 					<h2>Let's get in touch!</h2>
