Update project descriptions and improve layout styles for featured projects

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<h3 itemprop="name">🐈 CashCat</h3>
 								<span class="featured-badge">Featured</span>
 							</div>
-							<p itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now.</p>
+							<p itemprop="description">Free and private personal budgeting webapp built with users first in mind. Building with Josh Wilcox - now in early access!</p>
 							<div class="project-links">
 								<a href="https://cashcat.app" target="_blank" class="primary-link" rel="noopener" itemprop="url">Try CashCat →</a>
 							</div>
@@ -258,4 +258,3 @@
 		<script src="js/script.js"></script>
 	</body>
 </html>
-							
