Enhance tutoring services section: Implement compact grid layout and improve styling for service cards

--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -93,39 +93,53 @@
 
 		<main id="cont">
 			<!-- Services Section -->
-			<section class="content-section">
+			<section class="content-section" style="padding-top: 2rem; padding-bottom: 1.5rem;">
 				<div class="section-content">
                     <h1>Tutoring Services 📚</h1>
-					<div class="services-grid">
-						<div class="service-card">
-							<div class="service-icon">📐</div>
-							<h3>Mathematics</h3>
-							<p>GCSE (Grade 9) and A-Level (A*) qualified.</p>
+					<p class="services-intro">Professional tutoring in Mathematics and Computer Science for GCSE and A-Level students</p>
+					
+					<div class="services-grid-compact">
+						<div class="service-card-compact">
+							<span class="service-icon-small">📐</span>
+							<div>
+								<h4>Mathematics</h4>
+								<p>GCSE (Grade 9) & A-Level (A*)</p>
+							</div>
 						</div>
-						<div class="service-card">
-							<div class="service-icon">💻</div>
-							<h3>Computer Science</h3>
-							<p>GCSE (Grade 9) qualified, currently studying at University. </p>
+						<div class="service-card-compact">
+							<span class="service-icon-small">💻</span>
+							<div>
+								<h4>Computer Science</h4>
+								<p>GCSE (Grade 9) & University level</p>
+							</div>
 						</div>
-						<div class="service-card">
-							<div class="service-icon">🌐</div>
-							<h3>Web Development</h3>
-							<p>HTML, CSS, JavaScript, modern web development practices.</p>
+						<div class="service-card-compact">
+							<span class="service-icon-small">🌐</span>
+							<div>
+								<h4>Web Development</h4>
+								<p>HTML, CSS, JavaScript</p>
+							</div>
 						</div>
-						<div class="service-card">
-							<div class="service-icon">🐍</div>
-							<h3>Programming</h3>
-							<p>Python fundamentals, algorithms, data structures.</p>
+						<div class="service-card-compact">
+							<span class="service-icon-small">🐍</span>
+							<div>
+								<h4>Programming</h4>
+								<p>Python, algorithms, data structures</p>
+							</div>
 						</div>
-						<div class="service-card">
-							<div class="service-icon">📝</div>
-							<h3>Coursework Support</h3>
-							<p>Help with assignments, projects, and intensive coursework preparation.</p>
+						<div class="service-card-compact">
+							<span class="service-icon-small">📝</span>
+							<div>
+								<h4>Coursework</h4>
+								<p>Projects & assignments</p>
+							</div>
 						</div>
-						<div class="service-card">
-							<div class="service-icon">💬</div>
-							<h3>Free Consultation</h3>
-							<p>15-minute consultation with student or parent to discuss goals and learning plans.</p>
+						<div class="service-card-compact">
+							<span class="service-icon-small">💬</span>
+							<div>
+								<h4>Free Consultation</h4>
+								<p>15-minute planning session</p>
+							</div>
 						</div>
 					</div>
 				</div>
