Remove unused SVG images and update inline SVGs in index.html for improved performance and maintainability. Adjust styles for option images and modify tutoring section heading for consistency.

--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -95,7 +95,7 @@
 			<!-- Services Section -->
 			<section class="content-section" style="padding-top: 2rem; padding-bottom: 1.5rem;">
 				<div class="section-content">
-                    <h1>Tutoring Services 📚</h1>
+                    <h2>Tutoring Services </h2>
 					<p class="services-intro">Professional tutoring in Mathematics and Computer Science for GCSE and A-Level students</p>
 					
 					<div class="services-grid-compact">
