Refactor project item links for improved accessibility and styling

--- a/index.html
+++ b/index.html
@@ -161,31 +161,42 @@
 					</article>
 
 					<div class="projects-grid">
-						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
-							<h4 itemprop="name">
-								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
-								
-								<a href="https://favourites.me" target="_blank" rel="noopener" itemprop="url">favourites.me</a></h4>
-							<p itemprop="description">Track your favorite films, shows, books, and games</p>
-						</article>
-						<article class="project-item" itemscope itemtype="https://schema.org/WebSite">
-							<h4 itemprop="name">
-								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
-								<a href="https://www.climatestorieslibrary.com" target="_blank" rel="noopener" itemprop="url">Climate Stories Library</a></h4>
-							<p itemprop="description">International video library for climate crisis stories</p>
-						</article>
-						<article class="project-item" itemscope itemtype="https://schema.org/WebApplication">
-							<h4 itemprop="name">
-								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,10.84 21.79,9.69 21.39,8.61L19.79,10.21C19.93,10.8 20,11.4 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.6,4 13.2,4.07 13.79,4.21L15.4,2.6C14.31,2.21 13.16,2 12,2M19,2L15,6V7.5L12.45,10.05C12.3,10 12.15,10 12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12C14,11.85 14,11.7 13.95,11.55L16.5,9H18L22,5H19V2M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12H16A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8V6Z" /></svg>
-								 <a href="wordle" itemprop="url">Wordle</a></h4>
-							<p itemprop="description">Unlimited version of the popular word game</p>
-						</article>
-						<article class="project-item" itemscope itemtype="https://schema.org/VideoGame">
-							<h4 itemprop="name">
-								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18,13H17.32L15.32,15H17.23L19,17H5L6.78,15H8.83L6.83,13H6L3,16V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V16L18,13M17,7.95L12.05,12.9L8.5,9.36L13.46,4.41L17,7.95M12.76,2.29L6.39,8.66C6,9.05 6,9.68 6.39,10.07L11.34,15C11.73,15.41 12.36,15.41 12.75,15L19.11,8.66C19.5,8.27 19.5,7.64 19.11,7.25L14.16,2.3C13.78,1.9 13.15,1.9 12.76,2.29Z" /></svg>
-								<a href="https://politicalplayground.sherpa.software" target="_blank" rel="noopener" itemprop="url">The Political Playground</a></h4>
-							<p itemprop="description">Political campaign simulation game like The Campaign Trail</p>
-						</article>
+						<a href="https://favourites.me" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
+							<article class="project-item">
+								<h4 itemprop="name">
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
+									favourites.me
+								</h4>
+								<p itemprop="description">Track your favorite films, shows, books, and games</p>
+							</article>
+						</a>
+						<a href="https://www.climatestorieslibrary.com" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/WebSite">
+							<article class="project-item">
+								<h4 itemprop="name">
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
+									Climate Stories Library
+								</h4>
+								<p itemprop="description">International video library for climate crisis stories</p>
+							</article>
+						</a>
+						<a href="wordle" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
+							<article class="project-item">
+								<h4 itemprop="name">
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,10.84 21.79,9.69 21.39,8.61L19.79,10.21C19.93,10.8 20,11.4 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.6,4 13.2,4.07 13.79,4.21L15.4,2.6C14.31,2.21 13.16,2 12,2M19,2L15,6V7.5L12.45,10.05C12.3,10 12.15,10 12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12C14,11.85 14,11.7 13.95,11.55L16.5,9H18L22,5H19V2M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12H16A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8V6Z" /></svg>
+									Wordle
+								</h4>
+								<p itemprop="description">Unlimited version of the popular word game</p>
+							</article>
+						</a>
+						<a href="https://politicalplayground.sherpa.software" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/VideoGame">
+							<article class="project-item">
+								<h4 itemprop="name">
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18,13H17.32L15.32,15H17.23L19,17H5L6.78,15H8.83L6.83,13H6L3,16V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V16L18,13M17,7.95L12.05,12.9L8.5,9.36L13.46,4.41L17,7.95M12.76,2.29L6.39,8.66C6,9.05 6,9.68 6.39,10.07L11.34,15C11.73,15.41 12.36,15.41 12.75,15L19.11,8.66C19.5,8.27 19.5,7.64 19.11,7.25L14.16,2.3C13.78,1.9 13.15,1.9 12.76,2.29Z" /></svg>
+									The Political Playground
+								</h4>
+								<p itemprop="description">Political campaign simulation game like The Campaign Trail</p>
+							</article>
+						</a>
 					</div>
 
 					<div class="view-all">
