--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 					<h2>About Me</h2>
 					<div class="about-grid">
 						<div class="about-item">
-							<h3>Interests</h3>
+							<h3>Interests when I'm not coding</h3>
 							<ul>
-								<li>Learning Languages & Travelling</li>
-								<li><a target='_blank' href="https://www.flickr.com/people/indigon/">Photography</a></li>
-								<li>Reading & Writing</li>
-								<li>History & Politics</li>
+								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Ukrainian, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
+								<li><a target='_blank' href="https://www.flickr.com/people/indigon/">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
+								<li>I often read dozens of books each month, and even <a href="favourites.me">built a tool to track them!</a>. I'm also in the process of writing a couple of my own. They will probably never be ready. </li>
+								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="https://indigonolan.com/blog/posts/first-past-the-post-broken.html">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software">election simulation game if you're into that.</a></li>
 							</ul>
 						</div>
 						<div class="about-item">
@@ -227,8 +227,7 @@
 							<ul>
 								<li>Bizarre Love Triangle, New Order</li>
 								<li>Vienna, Ultravox</li>
-								<li>Wishing, A Flock of Seagulls</li>
-								<li>Starlight, Muse</li>
+								<li>Peaceboy, Edenheight</li>
 								<li>Mr E's Beautiful Blues, Eels</li>
 								<li>Purple Rain, Tonka B</li>
 							</ul>
@@ -251,7 +250,7 @@
 								<li>Dr Strangelove</li>
 								<li>12 Angry Men</li>
 								<li>Before the Coffee Gets Cold</li>
-								<li>Sinners</li>
+								<li>What You Are Looking For Is In the Library</li>
 								<li>Smiley's People</li>
 								<li>Duel</li>
 								<li>I Who Have Never Known Men</li>
