Update blog and portfolio links to reflect 'Writing' instead of 'Blog'; add short story styling

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,7 +85,7 @@
 					<a href="../" class="tab">Home</a>
 					<a href="./" class="tab active">Projects</a>
 					<a href="../tutoring" class="tab">Tutoring</a>
-					<a href="../blog" class="tab">Blog</a>
+					<a href="../blog" class="tab">Writing</a>
 				</nav>
 			</div>
 		</header>
