--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -86,7 +86,7 @@
 					<a href="../" class="tab">Home</a>
 					<a href="../portfolio" class="tab">Projects</a>
 					<a href="./" class="tab active">Tutoring</a>
-					<a href="../blog" class="tab">Blog</a>
+					<a href="../blog" class="tab">Writing</a>
 				</nav>
 			</div>
 		</header>
