improve tutoring page

--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -85,63 +85,17 @@
 				<nav id="menu">
 					<a href="../" class="tab">Home</a>
 					<a href="../portfolio" class="tab">Projects</a>
-					<a href="./" class="tab active">Tutoring</a>
 					<a href="../blog" class="tab">Writing</a>
 				</nav>
 			</div>
 		</header>
 
-		<main id="cont">
+		<main id="cont" class="small-margin">
 			<!-- Services Section -->
-			<section class="content-section" style="padding-top: 2rem; padding-bottom: 1.5rem;">
+			<section class="content-section remove-bottom" style="padding-top: 1rem;">
 				<div class="section-content">
                     <h2>Tutoring Services </h2>
-					<p class="services-intro">Professional tutoring in Mathematics and Computer Science for GCSE and A-Level students</p>
-					
-					<div class="services-grid-compact">
-						<div class="service-card-compact">
-							<span class="service-icon-small">📐</span>
-							<div>
-								<h4>Mathematics</h4>
-								<p>GCSE (Grade 9) & A-Level (A*)</p>
-							</div>
-						</div>
-						<div class="service-card-compact">
-							<span class="service-icon-small">💻</span>
-							<div>
-								<h4>Computer Science</h4>
-								<p>GCSE (Grade 9) & University level</p>
-							</div>
-						</div>
-						<div class="service-card-compact">
-							<span class="service-icon-small">🌐</span>
-							<div>
-								<h4>Web Development</h4>
-								<p>HTML, CSS, JavaScript</p>
-							</div>
-						</div>
-						<div class="service-card-compact">
-							<span class="service-icon-small">🐍</span>
-							<div>
-								<h4>Programming</h4>
-								<p>Python, algorithms, data structures</p>
-							</div>
-						</div>
-						<div class="service-card-compact">
-							<span class="service-icon-small">📝</span>
-							<div>
-								<h4>Coursework</h4>
-								<p>Projects & assignments</p>
-							</div>
-						</div>
-						<div class="service-card-compact">
-							<span class="service-icon-small">💬</span>
-							<div>
-								<h4>Free Consultation</h4>
-								<p>15-minute planning session</p>
-							</div>
-						</div>
-					</div>
+					<p class="services-intro">Professional tutoring in Mathematics and Computer Science for GCSE and A-Level students. I can also cover higher Web Development, Python Programming, Algorithms, Data Structures. I can also help with coursework projects and assignments.</p>
 				</div>
 			</section>
 
