--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -77,7 +77,7 @@
 		</script>
 	</head>
 	
-	<body>
+	<body class="dark-mode">
 		<header id="header">
 			<div class="header-content">
 				<a class="logo" href='../'>Indigo Nolan</a>
