--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -86,6 +86,9 @@
 					<a href="../" class="tab">Home</a>
 					<a href="../portfolio" class="tab">Projects</a>
 					<a href="../blog" class="tab">Writing</a>
+					<span onclick="toggle()" class="tab tab-svg">
+						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button'  d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
+					</span>
 				</nav>
 			</div>
 		</header>
@@ -184,6 +187,7 @@
 				</div>
 			</section>
 		</main>
+		<script src="../js/dark.js"></script>
 		<script src="../js/script.js"></script>
 	</body>
 </html>
