--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -86,6 +86,9 @@
 					<a href="./" class="tab active">Projects</a>
 
 					<a href="../blog" class="tab">Writing</a>
+					<span onclick="toggle()" class="tab tab-svg">
+						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button' d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
+					</span>
 				</nav>
 			</div>
 		</header>
@@ -223,5 +226,6 @@
 			</section>
 		</main>
 		<script src="../js/script.js"></script>
+		<script src="../js/dark.js"></script>
 	</body>
 </html>
