--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</script>
 	</head>
 	
-	<body class="dark-mode">
+	<body>
 		<header id="header">
 			<div class="header-content">
 				<a class="logo" href='./'>Indigo Nolan</a>
@@ -266,6 +266,6 @@
 			</section>
 		</main>
 		<script src="js/script.js"></script>
-		<script src="js/dark.js"></script>
+		<script src="js/dark.js?version=0.1"></script>
 	</body>
 </html>
