--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,7 +130,7 @@
 								<h4 itemprop="name">
 									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
 									favourites.me</h4>
-								<p itemprop="description">A private media library manager for tracking your favorite films, TV shows, books, games, and board games. I got fed up with having all my media spread across Letterboxd, Goodreads, and random Excel spreadsheets, so I made this just so I could be a nerd in one place only. There's no accounts or online features, and everything you enter is local-only via a CSV or a Google Drive file for sync purposes. It features smart CSV import/export and automatic watchlist management.</p>
+								<p itemprop="description">A private media library manager to track your favorite films, TV shows, books, games, and board games. Forget spreading everything across Letterboxd and Goodreads. It also syncs locally to a CSV or Google Drive.</p>
 							</article>
 						</a>
 
@@ -158,6 +158,15 @@
 									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18,13H17.32L15.32,15H17.23L19,17H5L6.78,15H8.83L6.83,13H6L3,16V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V16L18,13M17,7.95L12.05,12.9L8.5,9.36L13.46,4.41L17,7.95M12.76,2.29L6.39,8.66C6,9.05 6,9.68 6.39,10.07L11.34,15C11.73,15.41 12.36,15.41 12.75,15L19.11,8.66C19.5,8.27 19.5,7.64 19.11,7.25L14.16,2.3C13.78,1.9 13.15,1.9 12.76,2.29Z" /></svg>
 									The Political Playground</h4>
 								<p itemprop="description">A political simulation and semi-educational game inspired by games like The Campaign Trail and The Political Process. I am interested in historical and current politics, and think games are a great way to get people engaged in democracy. Play the game for a bit and then contact your local representative!</p>
+							</article>
+						</a>
+
+						<a href="https://allegedly.news" target="_blank" rel="noopener" class="project-item-link">
+							<article class="project-item" itemscope itemtype="https://schema.org/WebSite">
+								<h4 itemprop="name">
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>newspaper-variant-multiple-outline</title><path d="M4 7V19H19V21H4C2 21 2 19 2 19V7H4M21 5V15H8V5H21M21.3 3H7.7C6.76 3 6 3.7 6 4.55V15.45C6 16.31 6.76 17 7.7 17H21.3C22.24 17 23 16.31 23 15.45V4.55C23 3.7 22.24 3 21.3 3M9 6H12V11H9V6M20 14H9V12H20V14M20 8H14V6H20V8M20 11H14V9H20V11Z" /></svg>
+									Allegdly News</h4>
+								<p itemprop="description">A satire tech and breaking news website I maintain, inspired by the likes of the Onion and Tehccringe.</p>
 							</article>
 						</a>
 						
