--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
 								<p itemprop="description">International video library for climate crisis stories</p>
 							</article>
 						</a>
-						<a href="wordle" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
+						<a href="https://allegedly.news" target="_blank" class="project-item-link" itemscope itemtype="https://schema.org/WebSite">
 							<article class="project-item">
 								<h4 itemprop="name">
-									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,10.84 21.79,9.69 21.39,8.61L19.79,10.21C19.93,10.8 20,11.4 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.6,4 13.2,4.07 13.79,4.21L15.4,2.6C14.31,2.21 13.16,2 12,2M19,2L15,6V7.5L12.45,10.05C12.3,10 12.15,10 12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12C14,11.85 14,11.7 13.95,11.55L16.5,9H18L22,5H19V2M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12H16A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8V6Z" /></svg>
-									Wordle
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>newspaper-variant-multiple-outline</title><path d="M4 7V19H19V21H4C2 21 2 19 2 19V7H4M21 5V15H8V5H21M21.3 3H7.7C6.76 3 6 3.7 6 4.55V15.45C6 16.31 6.76 17 7.7 17H21.3C22.24 17 23 16.31 23 15.45V4.55C23 3.7 22.24 3 21.3 3M9 6H12V11H9V6M20 14H9V12H20V14M20 8H14V6H20V8M20 11H14V9H20V11Z" /></svg>
+									Allegedly News
 								</h4>
-								<p itemprop="description">Unlimited version of the popular word game</p>
+								<p itemprop="description">A satire tech and breaking news website</p>
 							</article>
 						</a>
 						<a href="https://politicalplayground.sherpa.software" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/VideoGame">
