--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 					<h1>Hi, I'm Indigo!</h1>
 					
 					<div class="looking-for">
-						<h2>What are you here for?</h2>
+						<h2>What are you looking for?</h2>
 						<div class="options-grid">
 							<a class="option-card option-primary" href="./portfolio">
 								<!-- inline SVG from imgs/desktop-tower-monitor.svg -->
 								
 								<h3><svg class='option-img'  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6,2C4.89,2 4,2.89 4,4V12C4,13.11 4.89,14 6,14H18C19.11,14 20,13.11 20,12V4C20,2.89 19.11,2 18,2H6M6,4H18V12H6V4M4,15C2.89,15 2,15.89 2,17V20C2,21.11 2.89,22 4,22H20C21.11,22 22,21.11 22,20V17C22,15.89 21.11,15 20,15H4M8,17H20V20H8V17M9,17.75V19.25H13V17.75H9M15,17.75V19.25H19V17.75H15Z" /></svg>
-									My Projects</h3>
-								<p>Games + web dev</p>
+									Software Portfolio</h3>
+								<p>Web dev + games</p>
 							</a>
 
 
