--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found - Indigo Nolan</title>
-    <link rel="stylesheet" href="stylesheet.css?version=0.5">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="/stylesheet.css?version=0.5">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="description" content="Page not found - Indigo Nolan's website" />
 </head>
 
@@ -39,6 +39,6 @@
         </div>
     </main>
 </body>
-	<script src="js/dark.js"></script>
+	<script src="/js/dark.js"></script>
 
 </html>
