Convert all blog posts to jekyll

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -181,7 +181,7 @@
 									Fantasteroids</h4>
 								<p itemprop="description"> An Asteroids-style game you can play for free on Steam. A project I made to learn game development and liked it so much I finished and published it.</p>
 								</a>
-								<a class="project-blog-button" href="https://indigonolan.com/blog/whyibuilt/fantasteroids.html">The Making Of</a>
+								<a class="project-blog-button" href="https://indigonolan.com/fantasteroids">The Making Of</a>
 							
 							</article>
 	
