Fix portfolio and styling issues

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -140,7 +140,7 @@
 									favourites.me</h4>
 								<p itemprop="description">A private media library manager to track your favorite films, TV shows, books, games, and board games. Forget spreading everything across Letterboxd and Goodreads!</p>
 								</a>
-							<a class="project-blog-button" href="https://indigonolan.com/blog/whyibuilt/favouritesmediamanager.html">Why I Built This</a>
+							<a class="project-blog-button" href="https://indigonolan.com/favourites-me">Why I Built This</a>
 							</article>
 	
 
